Full website should render correctly on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -39,12 +39,3 @@
   justify-content: top;
   color: white;
 }
-
-.Project-card {
-  background-color: #ffffff;
-  border-radius: 8px;
-  padding: 20px;
-  margin: 10px;
-  width: 800px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-}
